micflix/8-ingress/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rabbitmq/?(.*)
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
